# Verilog_ai_Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: DEVELOPMENT.md  generate_verilog_tool_plan.md  mcp-verilog-readme.md  mcp_python_sdk_readme.md  mcp_verilog_plan_gemini.md  plan.md  tool_functions.md
scripts/: dev.sh  dev_server.py  setup_project.py
src/: __init__.py  mcp_client.py  mcp_server.py  mcp_verilog_agent.py  test_mcp_cli.py  test_mcp_tools.py  test_mcp_verilog.py  test_risc_processor.py  test_server.py
src/mcp_verilog/: main.py
src/mcp_verilog/agents/: verilog_ai_agent.py
src/mcp_verilog/tools/: code_quality_analyzer.py  design_optimizer.py  design_verifier.py  doc_generator.py  verilog_generator.py
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_unit.py
